<resources>
    <string name="app_name">Login com BD</string>

    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>

    <string name="voltar">Voltar ao Login</string>

    <string name="cadastrarUsuario">Cadastrar novo usuário</string>
    <string name="confirmeSenha">Digite a senha novamente</string>
    <string name="cadastrar">Cadastrar Usuário</string>

</resources>
